# lab8-ver2

./: CMakeLists.txt
sources/: lab8.cpp
